<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/flag_imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/name_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/name_label"
        app:layout_constraintStart_toEndOf="@+id/flag_imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        tools:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/name_lable"
        app:layout_constraintTop_toTopOf="@+id/name_lable" />

    <TextView
        android:id="@+id/native_name_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/native_name_label"
        app:layout_constraintStart_toEndOf="@+id/flag_imageView"
        app:layout_constraintTop_toBottomOf="@+id/name_text" />

    <TextView
        android:id="@+id/native_name_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        tools:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/native_name_lable"
        app:layout_constraintTop_toTopOf="@+id/native_name_lable" />

    <TextView
        android:id="@+id/area_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/area_label"
        app:layout_constraintStart_toEndOf="@+id/flag_imageView"
        app:layout_constraintTop_toBottomOf="@+id/native_name_txt" />

    <TextView
        android:id="@+id/area_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        tools:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/area_lable"
        app:layout_constraintTop_toTopOf="@+id/area_lable" />

    <TextView
        android:id="@+id/population_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/population_label"
        app:layout_constraintStart_toEndOf="@+id/flag_imageView"
        app:layout_constraintTop_toBottomOf="@+id/area_lable" />

    <TextView
        android:id="@+id/population_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        tools:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/population_lable"
        app:layout_constraintTop_toTopOf="@+id/population_lable" />
</androidx.constraintlayout.widget.ConstraintLayout>